--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ses-demo",
   "version": "1.0.0",
   "description": "AWS SES example implemention",
-  "main": "handler.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "code:check": "yarn code:lint && yarn code:format --check",
